# Calculadora-3D

./: README.md  app.py  estrutura.txt  executavel.txt  main.py  pyproject.toml  requirements.txt  setup.py
calculadora_3d/core/: auth.py  calculos.py
calculadora_3d/ui/: login_window.py  main_window.py
calculadora_3d/utils/: resource_path.py
scr/: main.py
src/: main.py
