[project]
name = "calculadora-3d"
version = "0.1.0"
description = ""
authors = [
    {name = "Rui Franscisco de Paula",email = "rui.pdiniz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "calculadora_3d", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
